--- a/index.html
+++ b/index.html
@@ -4,20 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Product Preview Card Component</title>
 </head>
 <body>
     <main>
-        <img src="images/image-product-desktop.jpg" alt="Product image" class="product-img">
-        <div class="container">
-            <h6>Perfume</h6>
-            <h1>Gabrielle Essence Eau De Parfum</h1>
-            <p>
-                A floral, solar and voluptuous interpretation composed by Olivier Polger, Perfumer-Creator for the House of CHANEL
-            </p>
-            <h1>$149.99</h1>
-            <p>$169.99</p>
-            <button class="add-button"><img src="images/icon-cart.svg" alt=""> Add to Cart</button>
+        
+        <div class="card">
+
+            <div class="left"></div>
+
+            <div class="right">
+                <p class="category">Perfume</p>
+                <h1>Gabrielle Essence Eau De Parfum</h1>
+                <p class="description">
+                    A floral, solar and voluptuous interpretation composed by Olivier Polger, Perfumer-Creator for the House of CHANEL
+                </p>
+
+                <div class="prices">
+                    <p class="prices-updated">$149.99</p>
+                    <p class="prices-previous">$169.99</p>
+                </div>
+                <button class="add-button"><img src="images/icon-cart.svg" alt=""> Add to Cart</button>
+            </div>
         </div>
     </main>
 </body>
