--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="left"></div>
 
             <div class="right">
-                <p class="category">Perfume</p>
+                <p class="category">PERFUME</p>
                 <h1>Gabrielle Essence Eau De Parfum</h1>
                 <p class="description">
                     A floral, solar and voluptuous interpretation composed by Olivier Polger, Perfumer-Creator for the House of CHANEL
